fix: center alignment of description text

--- a/src/assets/css/design.css
+++ b/src/assets/css/design.css
@@ -69,6 +69,10 @@ html .whiteBG .sapFDynamicPageTitle {
     flex-direction: column;
 }
 
+.containerButtonRendererItems {
+    width: 100%;
+}
+
 .containerButtonRendererMiddle {
     display: flex;
     flex-direction: row;
